Bætti target blank í alla a href til að opna link í nýjum tab

--- a/pages/folf.html
+++ b/pages/folf.html
@@ -27,23 +27,23 @@
           <div class="cards">
             <div class="card">
             <p>(Mikilvægir)Aukahlutir</p>
-              <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red">Taska</a></li>
-              <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012">Diskaveiðistöng</a></li>
+              <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red" target="_blank">Taska</a></li>
+              <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012" target="_blank">Diskaveiðistöng</a></li>
             </div>
             <div class="card">
               <p>Pútterar</p>
-              <li><a href="https://hobbyogsport.is/products/active-sensei">Sensei</a></li>
-              <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883">Sense Orbit Hope</a></li>
+              <li><a href="https://hobbyogsport.is/products/active-sensei" target="_blank">Sensei</a></li>
+              <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883" target="_blank">Sense Orbit Hope</a></li>
             </div>
             <div class="card">
             <p>Midway</p>
-              <li><a href="https://hobbyogsport.is/products/lucid-justice">Lucid Justice</a></li>
-              <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/">Axiom Hex</a></li>
+              <li><a href="https://hobbyogsport.is/products/lucid-justice" target="_blank">Lucid Justice</a></li>
+              <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/" target="_blank">Axiom Hex</a></li>
             </div>
             <div class="card">
             <p>Drivers</p>
-              <li><a href="https://hobbyogsport.is/products/active-magician">Active Magician</a></li>
-              <li><a href="https://hobbyogsport.is/products/lucid-captain">Lucid Captain</a></li>
+              <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li>
+              <li><a href="https://hobbyogsport.is/products/lucid-captain" target="_blank">Lucid Captain</a></li>
             </div>
           </div>
         </ul>
