--- a/pages/practical.html
+++ b/pages/practical.html
@@ -29,22 +29,22 @@
           <div class="cards">
             <div class="card">
               <p>IKEA/Rúmfó</p>
-              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281">Stofumotta</a></li>
-              <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232">Forstofumotta</a></li>
-              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da">Skrifborð</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963">Nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792">Lok meððí</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174">Minna nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789">Lok meððí</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807">Stórt matarbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li>
+              <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
+              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Lok meððí</a></li>
             </div>
             <div class="card">
               <p>Fyrir Elfar</p>
-              <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT">Ný ryksuga, loksins</a></li>
-              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush">Hársvarðarbursti</a></li>
-              <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
-              <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850">Eyrna- og nef<br>hárasnyrtir</a></li>
+              <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li>
+              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li>
+              <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
+              <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li>
             </div>
             <!-- <div class="card">
               <p>Skipulag</p>
@@ -54,9 +54,9 @@
             </div> -->
             <div class="card">
               <p>Gjafakort</p>
-              <li><a href="https://www.sambio.is/Vouchers">Sambíómiðar</a></li>
-              <li><a href="https://www.heimkaup.is/biomidi">Smárabíómiðar</a></li>
-              <li><a href="https://oskaskrin.is/">Óskaskrín</a></li>
+              <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
+              <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
+              <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
             </div>
           </div>
         </ul>
