--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -37,8 +37,8 @@
             <p>Nerd culture</p>
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li> -->
-            <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5">Astra</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5">FBC </a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5" target="_blank">Astra</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5" target="_blank">FBC </a></li>
             <li><a href=""></a></li>
           </div>
           <div class="card">
@@ -47,16 +47,16 @@
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li> -->
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li> -->
-            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Brooklyn-Nine-Nine-B99-Cool-Cool-No-Doubt-by-clairesnation/35088164.EJUG5">Cool, no doubt</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5">Taylor Swift texti</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5">Bort license plate</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5" target="_blank">Ribs </a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Brooklyn-Nine-Nine-B99-Cool-Cool-No-Doubt-by-clairesnation/35088164.EJUG5" target="_blank">Cool, no doubt</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5" target="_blank">Taylor Swift texti</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
           </div>
           <div class="card">
             <p>Memes</p>
-            <li><a href="https://www.redbubble.com/i/sticker/Highly-caffeinated-Magnet-by-KelseyPatel/114759697.EJUG5">Koffínkisi</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/rickroll-qr-code-sticker-by-x-murphyarts-x/43639797.EJUG5">QR kóði</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/for-legal-reasons-this-is-a-joke-by-cederucki/53211073.EJUG5">A joke</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Highly-caffeinated-Magnet-by-KelseyPatel/114759697.EJUG5" target="_blank">Koffínkisi</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/rickroll-qr-code-sticker-by-x-murphyarts-x/43639797.EJUG5" target="_blank">QR kóði</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/for-legal-reasons-this-is-a-joke-by-cederucki/53211073.EJUG5" target="_blank">A joke</a></li>
           </div>
         </ul>
       </div>
