--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -55,7 +55,8 @@
           <div class="card">
             <p>Memes</p>
             <li><a href="https://www.redbubble.com/i/sticker/Highly-caffeinated-Magnet-by-KelseyPatel/114759697.EJUG5" target="_blank">Koffínkisi</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/rickroll-qr-code-sticker-by-x-murphyarts-x/43639797.EJUG5" target="_blank">QR kóði</a></li>
+            <!-- Þetta fylgir greinilega öllum RedBubble sendingum, svo ég þarf ekki -->
+            <!-- <li><a href="https://www.redbubble.com/i/sticker/rickroll-qr-code-sticker-by-x-murphyarts-x/43639797.EJUG5" target="_blank">QR kóði</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/for-legal-reasons-this-is-a-joke-by-cederucki/53211073.EJUG5" target="_blank">A joke</a></li>
           </div>
         </ul>
