--- a/pages/practical.html
+++ b/pages/practical.html
@@ -32,12 +32,16 @@
               <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li>
               <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
               <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li>
+            </div>
+            <div class="card">
+              <p>Nestis- og matarbox</p>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Nestislok</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Lok meððí</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li>
             </div>
             <div class="card">
               <p>Fyrir Elfar</p>
