--- a/pages/practical.html
+++ b/pages/practical.html
@@ -39,7 +39,7 @@
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Nestislok</a></li>
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Minnalok</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li>
             </div>
