Reyndi að adda grid, tók því ekki. Gerði allt hinsvegar mobile friendly uppí 600px. Listar verða lóðréttir undir 600px og allir centeraðir

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name ="viewport" content="width=device-width, inital-scale=1">
     <link rel="stylesheet" href="gjafalisti.css">
+    <!-- <link rel="stylesheet" href="grid.css"> -->
     <title>Gjafalisti Elfars</title>
   </head>
   <body>
