--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../gjafalisti.css">
   <title>Límmiðar</title>
 </head>
@@ -31,7 +32,8 @@
     <div class="card-container">
       <div class="centered-list">
         <ul id="sticker">
-        <h5>Límmiðar fyrir vatnsbrúsa og fartölvu</h5>
+        <h5>Límmiðar fyrir vatnsbrúsa<br>
+           og fartölvu</h5>
         <div class="cards">
           <div class="card">
             <p>Nerd culture</p>
