Lækkaði Steam Deck um ~sirka 488GB

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -28,7 +28,7 @@
             <div class="card">
               <p>Leikja</p>
               <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI" target="_blank">Final Fantasy I-VI</a></li>
-              <li><a href="https://elko.is/vorur/steam-deck-oled-1-tb-leikjatolva-344000/STEAMDECKOLED1000" target="_blank">Steam Deck OLED 1TB</a></li>
+              <li><a href="https://elko.is/vorur/steam-deck-oled-512-gb-leikjatolva-343998/STEAMDECKOLED512" target="_blank">Steam Deck OLED 512GB</a></li>
               <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR" target="_blank">Nintendo Switch<br>fjarstýring</a></li>
             </div>
             <div class="card">
