--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -30,24 +30,33 @@
               <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI" target="_blank">Final Fantasy I-VI</a></li>
               <li><a href="https://elko.is/vorur/steam-deck-oled-512-gb-leikjatolva-343998/STEAMDECKOLED512" target="_blank">Steam Deck OLED 512GB</a></li>
               <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR" target="_blank">Nintendo Switch<br>fjarstýring</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
               <p>Bækur</p>
               <li><a href="https://www.amazon.com/Have-No-Mouth-Must-Scream/dp/1497643074#customerReviews" target="_blank">7 bækur í einu</a></li>
               <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378" target="_blank">Góð bók</a></li>
+              <li><a href="https://www.penninn.is/is/book/hobbit-encyclopedia" target="_blank">Hobbit Encyclopedia</a></li>
+              <li><a href="https://www.penninn.is/is/book/machine-age" target="_blank">The Machine Age</a></li>
+              <li><a href="https://www.penninn.is/is/book/medusa-new-ancient-greek-tales" target="_blank">Medusa: New & Ancient Greek Tales</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
               <p>Borðspil</p>
               <li><a href="https://nexus.is/vara/pobbkviss-4/" target="_blank">Pöbbkviss 4</a></li>
               <li><a href="https://nexus.is/vara/ticket-to-ride-usa/" target="_blank">Ticket to Ride</a></li>
               <li><a href="https://nexus.is/vara/marvel-united/" target="_blank">Marvel United</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
               <p>Lego</p>
               <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1" target="_blank">BD-1</a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
             </div>
           </div>
         </ul>
