--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -41,7 +41,9 @@
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5" target="_blank">Astra</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5" target="_blank">FBC </a></li>
-            <li><a href=""></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
           </div>
           <div class="card">
             <p>Pop culture</p>
@@ -53,6 +55,9 @@
             <li><a href="https://www.redbubble.com/i/sticker/Brooklyn-Nine-Nine-B99-Cool-Cool-No-Doubt-by-clairesnation/35088164.EJUG5" target="_blank">Cool, no doubt</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5" target="_blank">Taylor Swift texti</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
           </div>
           <div class="card">
             <p>Memes</p>
@@ -60,6 +65,9 @@
             <!-- Þetta fylgir greinilega öllum RedBubble sendingum, svo ég þarf ekki -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/rickroll-qr-code-sticker-by-x-murphyarts-x/43639797.EJUG5" target="_blank">QR kóði</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/for-legal-reasons-this-is-a-joke-by-cederucki/53211073.EJUG5" target="_blank">A joke</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
           </div>
         </ul>
       </div>
