Bjó til nestisdiv til að hópa saman þau nestisbox og lok sem eiga saman. Núna er minni marginbottom innan nestisdiv og aðeins stærra utan nestisdiv til að aðskilja

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -40,12 +40,18 @@
             </div>
             <div class="card">
               <p>Nestis- og matarbox</p>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Minnalok</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li>
+              <div class="nestisdiv">
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li>
+              </div>
+              <div class="nestisdiv">
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Minnalok</a></li>
+              </div>
+              <div class="nestisdiv">
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li>
+              </div>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
