Gjafakort í Nexus. Fer aldrei af listanum

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -77,7 +77,7 @@
               <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
               <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
               <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://nexus.is/vara/gjafabref/" target="_blank">Nexus</a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
