Bjó til div fyrir svokallaða forvarann í fötunum sem tekur fram það eru engir hlekkir

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -16,7 +16,9 @@
         <h5>Föt</h5>
         <div class="cards">
           <div class="card">
-            <p>Engir hlekkir hér því miður, bara lýsingar</p>
+            <div class="lysingar">
+              <p>Engir hlekkir hér því miður, bara laufléttarlýsingar</p>
+            </div>
             <li>Þunna síðerma boli, hvaða lit sem er</li>
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
             <li>Leðurbelti. Venjulegt, ekkert sérstakt</li>
