--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -8,7 +8,7 @@
 </head>
   <body>
     <div class="backtoindex">
-      <a href="../index.html">Aftur í forvara</a>
+      <a href="../index.html">Aftur á forsíðu</a>
     </div>
     <div class="cards">
       <nav>
