Update eftir pakkaflóðið 2024

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -19,7 +19,8 @@
             <div class="lysingar">
               <p>Engir hlekkir hér því miður, bara laufléttarlýsingar</p>
             </div>
-            <li>Þunna síðerma boli, hvaða lit sem er</li>
+            <!-- Mig skortir aldrei nærbuxur, svo það fer aldrei af listanum, en ég tek bolina af listanum þar sem ég fékk frá Ástu Báru í jólagjöf 2024
+            <li>Þunna síðerma boli, hvaða lit sem er</li> -->
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
             <li>Leðurbelti. Venjulegt, ekkert sérstakt</li>
             <li></li>
@@ -33,12 +34,6 @@
             <li></li>
             <li></li>
           </div>
-          <!-- <div class="card">
-            <p>Pop culture</p>
-            <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5">Ribs </a></li>
-          </div> -->
           </div>
         </ul>
       </div>
