--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -30,8 +30,9 @@
               <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI" target="_blank">Final Fantasy I-VI</a></li>
               <li><a href="https://elko.is/vorur/steam-deck-oled-512-gb-leikjatolva-343998/STEAMDECKOLED512" target="_blank">Steam Deck OLED 512GB</a></li>
               <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR" target="_blank">Nintendo Switch<br>fjarstýring</a></li>
-              <li><a href="https://elko.is/vorur/playstation-portal-30-ara-afmaelisutgafa-374752/PS5PORTAL30" target="_blank">Playstation Portal, 30 ára afmælisútgáfa</a></li>
-              <li><a href="https://elko.is/vorur/playstation-portal-341353/PS5PORTAL" target="_blank">Playstation Portal, ef 30 ára útgáfan er búin</a></li>
+              <!-- Fékk frá Sigríði í jólagjöf 2024!
+              <li><a href="https://elko.is/vorur/playstation-portal-30-ara-afmaelisutgafa-374752/PS5PORTAL30" target="_blank">Playstation Portal, 30 ára afmælisútgáfa</a></li> -->
+              <!-- <li><a href="https://elko.is/vorur/playstation-portal-341353/PS5PORTAL" target="_blank">Playstation Portal, ef 30 ára útgáfan er búin</a></li> -->
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
