Bætti við Partners í gamesbooks

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -54,18 +54,23 @@
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
               <p>Borðspil</p>
               <li><a href="https://nexus.is/vara/pobbkviss-4/" target="_blank">Pöbbkviss 4</a></li>
               <li><a href="https://nexus.is/vara/ticket-to-ride-usa/" target="_blank">Ticket to Ride</a></li>
               <li><a href="https://nexus.is/vara/marvel-united/" target="_blank">Marvel United</a></li>
+              <li><a href="https://nexus.is/vara/partners/" target="_blank">Partners</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
               <p>Lego</p>
               <li><a href="https://www.amazon.com/dp/B09X1XXSS2/?coliid=I27VOBDQQ6KT4P&colid=13WFCH5M8AX91&ref_=list_c_wl_lv_ov_lig_dp_it&th=1" target="_blank">BD-1</a></li>
+              <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
