Bætti Jungle Speed í spil

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -62,7 +62,7 @@
               <li><a href="https://nexus.is/vara/ticket-to-ride-usa/" target="_blank">Ticket to Ride</a></li>
               <li><a href="https://nexus.is/vara/marvel-united/" target="_blank">Marvel United</a></li>
               <li><a href="https://nexus.is/vara/partners/" target="_blank">Partners</a></li>
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://nexus.is/vara/jungle-speed-skandinavisk-utgafa/" target="_blank">Jungle Speed</a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
