Bætti borðstofuborði í practical og breytti öllum a href cards í centered lists til þess að geta fiktað meira í cards

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -10,7 +10,7 @@
     <div class="backtoindex">
       <a href="../index.html">Aftur á forsíðu</a>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/fatnadur.html">Föt</a>
@@ -35,7 +35,7 @@
               <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
               <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li>
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://www.ikea.is/is/products/bord/bordstofubord-bordplotur-og-bordstofusett/bordstofubord-bordplotur-og-bordstofusett/nackanas-bord-art-40511056" target="_blank">Nýtt borðstofuborð</a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
@@ -88,7 +88,7 @@
         </ul>
       </div>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/stickers.html">Límmiðar</a>
