--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -10,7 +10,7 @@
     <div class="backtoindex">
       <a href="../index.html">Aftur á forsíðu</a>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/fatnadur.html">Föt</a>
