--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -38,7 +38,7 @@
         </ul>
       </div>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/folf.html">Folf</a>
