--- a/pages/folf.html
+++ b/pages/folf.html
@@ -10,7 +10,7 @@
     <div class="backtoindex">
       <a href="../index.html">Aftur á forsíðu</a>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/fatnadur.html">Föt</a>
@@ -54,7 +54,7 @@
         </ul>
       </div>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/gamesbooks.html">Leikir og bækur</a>
