--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -10,7 +10,7 @@
     <div class="backtoindex">
       <a href="../index.html">Aftur á forsíðu</a>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/fatnadur.html">Föt</a>
@@ -27,7 +27,7 @@
           <div class="cards">
             <div class="card">
               <p>Leikja</p>
-              <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI" target="_blank">Final Fantasy I-VI</a></li>
+              <li><a href="https://elko.is/vorur/final-fantasy-i-vi-anniversary-edition-swi-366387/SWIFFIVI" target="_blank">Final Fantasy<br> I-VI</a></li>
               <li><a href="https://elko.is/vorur/steam-deck-oled-512-gb-leikjatolva-343998/STEAMDECKOLED512" target="_blank">Steam Deck OLED 512GB</a></li>
               <li><a href="https://elko.is/vorur/nintendo-pro-thradlaus-styripinni-svartur-82422/SWIPROWLCONTR" target="_blank">Nintendo Switch<br>fjarstýring</a></li>
               <!-- Fékk frá Sigríði í jólagjöf 2024!
@@ -79,7 +79,7 @@
         </ul>
       </div>
     </div>
-    <div class="cards">
+    <div class="centered-list">
       <nav>
         <div class="navcard">
           <a href="/pages/practical.html">Praktískt heima</a>
