Bætti við Kallax hillueiningu til að loksins geta geymt meira nördastuff

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -36,7 +36,7 @@
               <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li>
               <li><a href="https://www.ikea.is/is/products/bord/bordstofubord-bordplotur-og-bordstofusett/bordstofubord-bordplotur-og-bordstofusett/nackanas-bord-art-40511056" target="_blank">Nýtt borðstofuborð</a></li>
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://www.ikea.is/is/products/hirslur-fyrir-heimilid/hirslur/opnar-hirslur/kallax-hillueining-art-10409932" target="_blank">Kallax hillueining</a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
