Bætti við lyftingaskóm í fatnað og breytti lýsingunni á síðunni

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -17,12 +17,16 @@
         <div class="cards">
           <div class="card">
             <div class="lysingar">
-              <p>Engir hlekkir hér því miður, bara laufléttarlýsingar</p>
+              <p>Ef það er ekki hlekkur þá er bara lauflétt lýsingr</p>
             </div>
             <!-- Mig skortir aldrei nærbuxur, svo það fer aldrei af listanum, en ég tek bolina af listanum þar sem ég fékk frá Ástu Báru í jólagjöf 2024
             <li>Þunna síðerma boli, hvaða lit sem er</li> -->
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
             <li>Leðurbelti. Venjulegt, ekkert sérstakt</li>
+            <li><a href="https://utilif.is/utilif/free-metcon-5-aefingaskor-nikdv3949.html" target="_blank">Lyftingaskór, stærð 43</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
             <li></li>
             <li></li>
             <li></li>
