Lagaði eina(1) stafsetningarvillu

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -17,7 +17,7 @@
         <div class="cards">
           <div class="card">
             <div class="lysingar">
-              <p>Ef það er ekki hlekkur þá er bara lauflétt lýsingr</p>
+              <p>Ef það er ekki hlekkur þá er bara lauflétt lýsing</p>
             </div>
             <!-- Mig skortir aldrei nærbuxur, svo það fer aldrei af listanum, en ég tek bolina af listanum þar sem ég fékk frá Ástu Báru í jólagjöf 2024
             <li>Þunna síðerma boli, hvaða lit sem er</li> -->
