--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -19,11 +19,12 @@
             <div class="lysingar">
               <p>Ef það er ekki hlekkur þá er bara lauflétt lýsing</p>
             </div>
-            <!-- Mig skortir aldrei nærbuxur, svo það fer aldrei af listanum, en ég tek bolina af listanum þar sem ég fékk frá Ástu Báru í jólagjöf 2024
+            <!-- Mig skortir alltaf nærbuxur, svo það fer aldrei af listanum, en ég tek bolina af listanum þar sem ég fékk frá Ástu Báru í jólagjöf 2024
             <li>Þunna síðerma boli, hvaða lit sem er</li> -->
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
             <li>Leðurbelti. Venjulegt, ekkert sérstakt</li>
-            <li><a href="https://utilif.is/utilif/free-metcon-5-aefingaskor-nikdv3949.html" target="_blank">Lyftingaskór, stærð 43</a></li>
+            <!-- Keypti mér bara sjálfur því ég var í Kringlunni
+            <li><a href="https://utilif.is/utilif/free-metcon-5-aefingaskor-nikdv3949.html" target="_blank">Lyftingaskór, stærð 43</a></li> -->
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
