Fann shitload af bolum á netinu. Stray stickers líka

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -22,9 +22,18 @@
             <!-- Mig skortir alltaf nærbuxur, svo það fer aldrei af listanum, en ég tek bolina af listanum þar sem ég fékk frá Ástu Báru í jólagjöf 2024
             <li>Þunna síðerma boli, hvaða lit sem er</li> -->
             <li>Nærbuxur, boxer briefs(því litríkara því betra)</li>
-            <li>Leðurbelti. Venjulegt, ekkert sérstakt</li>
+            <li>Leðurbelti. Venjulegt, ekkert fancy</li>
             <!-- Keypti mér bara sjálfur því ég var í Kringlunni
             <li><a href="https://utilif.is/utilif/free-metcon-5-aefingaskor-nikdv3949.html" target="_blank">Lyftingaskór, stærð 43</a></li> -->
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/citizen-sleeper-shirt" target="_blank">Citizen Sleeper bolur</a></li>
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/powerwash-simulator-shirt" target="_blank">PowerWash Simulator bolur</a></li>
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/ghost-of-tsushima-legend-shirt" target="_blank">Ghost of Tsushima bolur</a></li>
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/horizon-tallneck-shirt" target="_blank">Horizon Tallneck bolur</a></li>
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/last-of-us-cordyceps-shirt" target="_blank">The Last of Us Cordyceps bolur</a></li>
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/okami-painted-shirt" target="_blank">Okami bolur</a></li>
+            <li><a href="https://www.fangamer.com/collections/t-shirts/products/stray-cat-shirt" target="_blank">Stray bolur</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
