--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -40,8 +40,8 @@
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Aqua-Cola-by-edcarj82/163154939.EJUG5">Aqua Kola</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5" target="_blank">Astra</a></li>
-            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5" target="_blank">FBC </a></li>
-            <li><a href="" target="_blank"></a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5" target="_blank">FBC</a></li>
+            <li><a href="https://www.fangamer.com/collections/stickers/products/stray-game-stickers" target="_blank">Stray</a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
           </div>
