--- a/pages/practical.html
+++ b/pages/practical.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="backtoindex">
-      <a href="../index.html">Aftur á forsíðu</a>
+      <a href="../index.html">Aftur í forvara</a>
     </div>
     <div class="centered-list">
       <nav>
@@ -30,16 +30,11 @@
           <div class="cards">
             <div class="card">
               <p>IKEA/Rúmfó</p>
-              <!-- Fengum frá Láru og Kamil og stelpunum jólin 2024
-              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
+              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li>
               <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
               <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
-              <li><a href="https://www.ikea.is/is/products/bord/bordstofubord-bordplotur-og-bordstofusett/bordstofubord-bordplotur-og-bordstofusett/nackanas-bord-art-40511056" target="_blank">Nýtt borðstofuborð</a></li>
-              <li><a href="https://www.ikea.is/is/products/hirslur-fyrir-heimilid/hirslur/opnar-hirslur/kallax-hillueining-art-10409932" target="_blank">Kallax hillueining</a></li>
-              <li><a href="" target="_blank"></a></li>
-            </div>
-              <!-- Keyptum bara sjálf -->
-              <!-- <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li> -->
+              <!-- Keyptum bara sjálf
+              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li> -->
             </div>
             <div class="card">
               <p>Nestis- og matarbox</p>
@@ -55,13 +50,9 @@
             <div class="card">
               <p>Fyrir Elfar</p>
               <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li>
-              <!-- Fékk frá kertó 2024
-              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
+              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li>
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
               <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li>
-              <li><a href="" target="_blank"></a></li>
-              <li><a href="" target="_blank"></a></li>
-              <li><a href="" target="_blank"></a></li>
             </div>
             <!-- <div class="card">
               <p>Skipulag</p>
@@ -71,13 +62,9 @@
             </div> -->
             <div class="card">
               <p>Gjafakort</p>
-              <!-- Þessi listi tæmist aldrei. Við þurfum alltaf fleiri og fleiri gjafamiða :3 -->
               <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
               <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
               <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
-              <li><a href="https://nexus.is/vara/gjafabref/" target="_blank">Nexus</a></li>
-              <li><a href="" target="_blank"></a></li>
-              <li><a href="" target="_blank"></a></li>
             </div>
           </div>
         </ul>
