Ég klúðraði greinilega breytingum frá því í des, var að laga

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -30,7 +30,8 @@
           <div class="cards">
             <div class="card">
               <p>IKEA/Rúmfó</p>
-              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li>
+              <!-- Fengum frá Láru og Kamil og stelpunum jólin 24
+              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
               <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
               <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
               <!-- Keyptum bara sjálf
@@ -50,7 +51,7 @@
             <div class="card">
               <p>Fyrir Elfar</p>
               <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li>
-              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li>
+              <!-- <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
               <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
               <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li>
             </div>
@@ -65,6 +66,7 @@
               <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
               <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
               <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
+              <li><a href="https://nexus.is/vara/gjafabref/"></a>Nexus</li>
             </div>
           </div>
         </ul>
