--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -51,7 +51,7 @@
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Me-And-Karma-Vibe-Like-That-Typography-Karma-Cat-Fans-by-JustCasualsShop/143578526.EJUG5">Karma </a></li> -->
             <!-- Fékk frá Sigríði uppúr þurru lok nóv 24 -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/Getaway-Race-car-Taylor-by-IlyasJerome/146074702.EJUG5">Getaway Car </a></li> -->
-            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5" target="_blank">Ribs </a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/now-playing-ribs-by-lorde-by-comingofage/52586935.EJUG5" target="_blank">Ribs by Lorde</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Brooklyn-Nine-Nine-B99-Cool-Cool-No-Doubt-by-clairesnation/35088164.EJUG5" target="_blank">Cool, no doubt</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5" target="_blank">Taylor Swift texti</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
