--- a/pages/practical.html
+++ b/pages/practical.html
@@ -66,7 +66,7 @@
               <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
               <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
               <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
-              <li><a href="https://nexus.is/vara/gjafabref/"></a>Nexus</li>
+              <li><a href="https://nexus.is/vara/gjafabref/">Nexus</a></li>
             </div>
           </div>
         </ul>
